# konar-ros2-workshop

./: instruction.md  map.pgm  map.yaml  mapll.yaml  world.sdf
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yaml
src/python_subscriber/: package.xml  setup.cfg  setup.py
src/python_subscriber/python_subscriber/: subscriber.py
src/robot_description/: package.xml  setup.py
src/robot_description/config/: ekf.yaml
src/robot_description/launch/: robot.launch.py
src/robot_description/resource/: robot.urdf.xacro
